fixed appearing slider in y axis and scaling on mobile devices

--- a/docs/input.css
+++ b/docs/input.css
@@ -128,3 +128,7 @@ html {
   mask-position: center;
   mask-size: contain;
 }
+
+html, body {
+    overflow-x: hidden;
+}
